public/css/map.less
// SF POPOS
// MAP LESS

@import "normalize.less";
@import "preboot.less";

// CONSTANTS

@title-bg:      #3d263b;
@detail-width:  520px;

// TYPOGRAPHY PRESETS

@import url(http://fonts.googleapis.com/css?family=Leckerli+One);
@title-font:  'Leckerli One', 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif;

// MIXINS

// none

// LAYOUT

body {
  padding: 0;
  margin: 0;
}

#map {
  width: 100%;
  height: 100%;
  position: absolute;
}

// OVERLAY

#detailview {
  z-index: 2000;
  position: absolute;
  left: 40px;
  top: 40px;
  width: @detail-width;
  overflow: hidden;
  // border-radius: 16px;
  //.border-top-radius(20px);
  box-shadow: 0 0 10px rgba(0,0,0,0.5);
  font-family: 'Helvetica Neue Light', 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif;
  font-size: 14px;
  // broken
  //.border-bottom-radius(20px);
  .title {
    text-align: center;
    height: 60px;
    background-color: @title-bg;
    color: white;
    padding: 0 20px;
    overflow: hidden;
    cursor: grab;
    cursor: -moz-grab;
    cursor: -webkit-grab;
    .user-select(none);
    h2 {
      font-family: @title-font;
      font-size: 24px;
      font-weight: normal;
      line-height: 60px;
      padding: 0;
      margin: 0;
    }
  }
  .photo {
    .user-select(none);
    width: @detail-width;
    height: @detail-width * 0.46875;
    background-color: rgba(255, 255, 255, 0.90);
  }
  .info {
    background-color: rgba(255, 255, 255, 0.90);
    padding: 0 30px;
    .buttons {
      height: 60px;
      .address {
        width: 50%;
        float: left;
        font-size: 12px;
        font-weight: bold;
        padding-top: 20px;
      }
      .icons {
        .user-select(none);
        width: 50%;
        position: absolute;
        right: 15px;
        text-align: center;
        padding-top: 10px;
        span {
          display: block;
          float: right;
          width: 30px;
          height: 40px;
          padding-top: 30px;
          font-size: 10px;
          line-height: 10px;
          margin: 0 15px;
        }
        .icon-views {
          background: url('../img/ui/icons.png') 0 0 no-repeat;
        }
        .icon-open {
          background: url('../img/ui/icons.png') -30px 0 no-repeat;
        }
        .icon-art {
          background: url('../img/ui/icons.png') -60px 0 no-repeat;
        }
        .icon-outdoor {
          background: url('../img/ui/icons.png') -90px 0 no-repeat;
        }
        .icon-food {
          background: url('../img/ui/icons.png') -120px 0 no-repeat;
        }
      }
    }
    .description {
      height: 160px;
      line-height: 160%;
//      overflow: auto;
    }
  }
  .navigation {
    .user-select(none);
    span {
      background-color: rgba(255, 255, 255, 0.90);
      width: 50%;
      float: left;
      text-align: center;
      border-top: 1px solid rgb(220, 220, 220);
      box-sizing: border-box;
      cursor: pointer;
      &:hover {
        background-color: white;
      }
      &:first-of-type {
        border-right: 1px solid rgb(220, 220, 220);
      }
    }
  }

}

